# pantheon-os

./: .gitignore  BUILD-PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  deny.toml  dist-workspace.toml  release-plz.toml  rust-toolchain.toml
crates/album/: Cargo.toml
crates/album/src/: cli.rs  lib.rs  main.rs  screen.rs
crates/album/tests/: contract.rs  screen.rs
crates/album/tests/snapshots/: contract__entity_as_node.snap  contract__exit_codes.snap  contract__on_disk_cascaded_ref.snap  contract__on_disk_entity_file.snap  contract__refusal_editor_two_fields.snap  contract__refusal_move_entity_node.snap  contract__refusal_rename_entity_node.snap  contract__refusal_rename_onto_occupied.snap  contract__refusal_slug_held_by_another_kind.snap  contract__resolve_through_pan.snap  contract__schema_surface.snap  contract__verb_add_dry_run.snap  contract__verb_add_fresh.snap  contract__verb_add_overwrite_applied.snap  contract__verb_add_overwrite_pending.snap  contract__verb_edit.snap  contract__verb_edit_kind.snap  contract__verb_move.snap  contract__verb_rename.snap  contract__verb_rm.snap  contract__verbs_read.snap  contract__warn_duplicate_slug.snap
crates/annales/: Cargo.toml
crates/annales/src/: cli.rs  lib.rs  main.rs  screen.rs
crates/annales/tests/: contract.rs  screen.rs
crates/annales/tests/snapshots/: contract__exit_codes.snap  contract__on_disk_series_file.snap  contract__schema_surface.snap  contract__verb_add_created_series.snap  contract__verb_add_dry_run.snap  contract__verb_add_fresh.snap  contract__verb_add_overwrite_applied.snap  contract__verb_add_overwrite_pending.snap  contract__verb_edit.snap  contract__verb_move.snap  contract__verb_rename.snap  contract__verb_rm.snap  contract__verbs_read.snap
crates/atrium/: Cargo.toml
crates/atrium/src/: cli.rs  lib.rs  main.rs  mosaic.rs  screen.rs
crates/atrium/tests/: relay.rs  screen.rs
crates/auspex/: Cargo.toml
crates/auspex/src/: apply.rs  cli.rs  grant.rs  lib.rs  main.rs  rule.rs  screen.rs
crates/auspex/tests/: apply.rs  contract.rs  propose.rs  screen.rs
crates/auspex/tests/snapshots/: contract__exit_codes.snap  contract__help_surface.snap  contract__ls.snap  contract__refusal_under_rule.snap  contract__version.snap
crates/fasti/: Cargo.toml
crates/fasti/src/: cli.rs  lib.rs  main.rs  screen.rs
crates/fasti/tests/: contract.rs  screen.rs
crates/fasti/tests/snapshots/: contract__derived_unspanned.snap  contract__dispatch_edit_by_shape.snap  contract__exit_codes.snap  contract__on_disk_event_file.snap  contract__on_disk_span_file.snap  contract__refusal_move_entity_node.snap  contract__refusal_rename_entity_node.snap  contract__refusal_rename_onto_other_shape.snap  contract__refusal_series_onto_span.snap  contract__refusal_span_onto_event_series.snap  contract__resolve_through_pan.snap  contract__schema_surface.snap  contract__verb_add_created_series.snap  contract__verb_add_event_fresh.snap  contract__verb_add_event_overwrite_applied.snap  contract__verb_add_event_overwrite_pending.snap  contract__verb_add_span_dry_run.snap  contract__verb_add_span_fresh.snap  contract__verb_add_span_overwrite_applied.snap  contract__verb_add_span_overwrite_pending.snap  contract__verb_edit_event.snap  contract__verb_edit_span_close.snap  contract__verb_move_span.snap  contract__verb_rename_event_series.snap  contract__verb_rename_span.snap  contract__verb_rm_event.snap  contract__verb_rm_span.snap  contract__verbs_read.snap  contract__warn_duplicate_slug.snap
crates/mappa/: Cargo.toml
crates/mappa/src/: cli.rs  lib.rs  main.rs  screen.rs
crates/mappa/tests/: contract.rs  screen.rs
crates/mappa/tests/snapshots/: contract__entity_as_node.snap  contract__exit_codes.snap  contract__on_disk_cascaded_ref.snap  contract__on_disk_entity_file.snap  contract__refusal_bounds_inverted.snap  contract__refusal_editor_two_fields.snap  contract__refusal_move_entity_node.snap  contract__refusal_rename_entity_node.snap  contract__refusal_rename_onto_occupied.snap  contract__refusal_slug_held_by_another_kind.snap  contract__resolve_through_pan.snap  contract__schema_surface.snap  contract__verb_add_dry_run.snap  contract__verb_add_fresh.snap  contract__verb_add_overwrite_applied.snap  contract__verb_add_overwrite_pending.snap  contract__verb_add_region_wrapping.snap  contract__verb_edit.snap  contract__verb_edit_kind.snap  contract__verb_move.snap  contract__verb_rename.snap  contract__verb_rm.snap  contract__verbs_read.snap  contract__warn_duplicate_slug.snap
crates/pan/: Cargo.toml
crates/pan/src/: cli.rs  lib.rs  main.rs  render.rs  screen.rs
crates/pan/tests/: doctor.rs  grammar.rs  screen.rs
crates/pantheon/: Cargo.toml
crates/pantheon/src/: cascade.rs  classify.rs  code.rs  contract.rs  core.rs  document.rs  envelope.rs  error.rs  hook.rs  lib.rs  lock.rs  main.rs  meta.rs  mint.rs  name.rs  node_ops.rs  plan.rs  resolve.rs  root.rs  schema.rs  shape.rs  store.rs  table.rs  tree.rs  validate.rs
crates/pantheon/tests/: contract.rs  editor.rs  table.rs  units.rs
crates/pantheon/tests/snapshots/: contract__classify_map.snap  contract__code_and_dirname_parsing.snap  contract__normalize_table.snap  (+7 more)
crates/pensum/: Cargo.toml
crates/pensum/src/: cli.rs  lib.rs  main.rs  screen.rs
crates/pensum/tests/: contract.rs  hook.rs  screen.rs
crates/porticus/: Cargo.toml
crates/porticus/src/: action.rs  app.rs  ident.rs  keymap.rs  lib.rs  overlay.rs  rail.rs  runtime.rs  term.rs  theme.rs  view.rs
crates/porticus/tests/: chrome.rs  frame.rs
crates/rationes/: Cargo.toml
crates/rationes/src/: cli.rs  lib.rs  main.rs  screen.rs
crates/rationes/tests/: contract.rs  screen.rs
crates/speculum/: Cargo.toml
crates/speculum/src/: cli.rs  horizon.rs  lib.rs  main.rs  mosaic.rs  screen.rs
crates/speculum/tests/: relay.rs  screen.rs
crates/studium/: Cargo.toml
crates/studium/src/: cli.rs  curriculum.rs  fold.rs  lib.rs  main.rs  mosaic.rs  screen.rs
crates/studium/tests/: relay.rs  screen.rs
crates/tessera/: Cargo.toml
crates/tessera/src/: lib.rs
(+108 files in other folders)
