# PantheonOS — single public Cargo workspace (monorepo, forced by I5).
# Per-crate versions & per-app releases (§15.5); members inherit shared metadata.
[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
edition      = "2024"
rust-version = "1.88"   # floor set by ratatui 0.30 (§13); edition 2024 alone needs only 1.85
license      = "MIT OR Apache-2.0"
authors      = ["Linus Nyman"]
repository   = "https://github.com/LinusNyman/pantheon-os"

# Shared dependency set — see PANTHEONOS-SPEC.md §13. Crates opt in with `<dep>.workspace = true`.
[workspace.dependencies]
# internal (hub-and-spoke, I5): everything points at pantheon; nothing points sideways.
# version + path: path is used in-workspace, version is required for crates.io publish.
pantheon = { path = "crates/pantheon", version = "0.1.0" }
porticus = { path = "crates/porticus", version = "0.1.0" }
tessera  = { path = "crates/tessera",  version = "0.1.0" }

# external
# ratatui: apps take the full crate (it owns the backend); widget libs take
# ratatui-core (§11.2, §13). crossterm is NOT a direct dep — it arrives via the
# `ratatui::crossterm` re-export so backend and call sites cannot drift (§13).
ratatui       = "0.30"
ratatui-core  = "0.1"
clap          = { version = "4", features = ["derive"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = { version = "1", features = ["raw_value"] }   # spine carries `data` opaquely (I5)
schemars      = "1"
toml_edit     = "0.25"   # every TOML surface: annotations AND `+++` frontmatter (§6.6)
walkdir       = "2"      # not `ignore`: no ignore-file may govern the tree (§13, §18)
fd-lock       = "4"
jiff          = "0.2"
unicode-normalization = "0.1"   # NFC for typed tokens (§5.1)
shell-words   = "1"      # splits $VISUAL/$EDITOR into argv (§7.3)
sha2          = "0.11"   # plan tokens (§7.3)
thiserror     = "2"
anyhow        = "1"
tracing       = "0.1"
insta         = "1"

[profile.release]
lto       = true
strip     = true
codegen-units = 1
panic     = "unwind"   # REQUIRED: Porticus's terminal-teardown Drop guard rides on unwinding (PORTICUS-SPEC.md P§10).
                       # `panic = "abort"` runs no destructor and would leave the terminal in raw mode on any panic.
