[package]
name = "fasti"
version = "0.1.0"
description = "Fasti — the placement tense of Actio. Named series of spans and events on the timeline."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "fas"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:porticus", "dep:tessera"]

[dependencies]
pantheon.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true   # `Core::Record: JsonSchema` — the `schema` verb (§7.2)
porticus = { workspace = true, optional = true }
tessera = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
