[package]
name = "pan"
version = "0.1.0"
description = "The PantheonOS structural CLI — codes, files, refs, node annotations over the spine (§5.5)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The `pan` bin, named by its three-char short (§14). A separate crate from the
# spine so pantheon stays lib-only and UI-free: pan's TUI (§10) will ride a `tui`
# feature here at step 6, never inside pantheon (porticus → pantheon, I5/§14).
[[bin]]
name = "pan"
path = "src/main.rs"

[features]
# `pan`'s TUI (§10) rides the default feature like every instrument's; drop it and the
# structural CLI stands alone (§14).
default = ["tui"]
tui = ["dep:porticus", "dep:ratatui"]

[dependencies]
pantheon.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
porticus = { workspace = true, optional = true }
# `pan` writes its own two tabs (§10, P§3), which paint into a ratatui `Buffer` — so it
# takes the full crate, upstream's rule for an application (§13).
ratatui = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
