[package]
name = "pantheon"
version = "0.1.0"
description = "The PantheonOS spine — addressing, resolution, the record envelope, the Core substrate, and write-time validation."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# pantheon is lib-only (§14): everything links the spine, and nothing may drag the
# UI layer in with it (I5). The `pan` bin lives in its own crate (crates/pan) so
# porticus → pantheon stays acyclic once pan grows a TUI behind a feature (§14).
[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
# Every TOML surface is toml_edit's, frontmatter included: the `+++` fence is
# found by scanning, so no frontmatter crate brings a second parser in (§6.6, §13).
toml_edit.workspace = true
walkdir.workspace = true
fd-lock.workspace = true
jiff.workspace = true
unicode-normalization.workspace = true
shell-words.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
