[package]
name = "pensum"
version = "0.1.0"
description = "Pensum — the intention tense of Actio. A single register-file of tasks per node, Auspex's primary write target."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pen"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:porticus", "dep:tessera"]

[dependencies]
pantheon.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
porticus = { workspace = true, optional = true }
tessera = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
