[package]
name = "studium"
version = "0.1.0"
description = "Studium — the studies lens. Hosts derived figures (e.g. GPA) over readings homed under Disciplina."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "stu"
path = "src/main.rs"

[dependencies]
pantheon.workspace = true
porticus.workspace = true
tessera.workspace = true
clap.workspace = true
anyhow.workspace = true
